--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-09-14  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/ltdl.c (lt_argz_insert): Work around newlib
+	argz_insert bug.
+	* Makefile.am (VERSION_INFO): Bumped revision.
+	Reported by Eric Blake <ebb9@byu.net>.
+
 2005-09-13  Peter Ekberg  <peda@lysator.liu.se>,
 	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
