--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-22  Tim Rice  <tim@multitalents.net>
+
+	* libltdl/m4/libtool.m4 (LT_PATH_NM, _LT_LINKER_SHLIBS)
+	(_LT_LANG_CXX_CONFIG, _LT_SYS_HIDDEN_LIBDEPS):
+	Add missing `;;' after case list.
+
 2005-09-22  Peter Ekberg  <peda@lysator.liu.se>,
 	    Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
