--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-22  Tim Rice  <tim@multitalents.net>
+
+	* libtool.m4 (AC_PROG_NM, AC_LIBTOOL_LANG_CXX_CONFIG)
+	(AC_LIBTOOL_POSTDEP_PREDEP, AC_LIBTOOL_PROG_LD_SHLIBS):
+	Add missing `;;' after case list.
+
 2005-09-21  Peter Ekberg  <peda@lysator.liu.se>,
 
 	* ltmain.in (clean mode): Clean up $dlname as well when cleaning
