--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-23  Eric Blake  <ebb9@byu.net>  (tiny change)
+
+	* libltdl/loaders/loadlibrary.c (vm_open): Silence gcc warnings.
+	[__CYGWIN__]: Include <sys/cygwin.h> for prototype.
+
 2005-09-22  Gary V. Vaughan  <gary@gnu.org>
 
 	* bootstrap: Don't clobber the working copy metadata in
