--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-09-23  Peter Ekberg  <peda@lysator.liu.se>,
+
+	* libltdl/m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS): Fix awk
+	script to be a single line so that the cache variable isn't
+	multiline.
+
 2005-09-23  Eric Blake  <ebb9@byu.net>  (tiny change)
 
 	* libltdl/loaders/loadlibrary.c (vm_open): Silence gcc warnings.
