--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-23  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* tests/link-order.at [ aix* ]: skip path syntax grep.
+
 2005-09-23  Peter Ekberg  <peda@lysator.liu.se>,
 
 	* libltdl/m4/libtool.m4 (_LT_CMD_GLOBAL_SYMBOLS): Fix awk
