--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-09-25  Alan W. Irwin  <irwin@beluga.phys.uvic.ca>,
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/config/ltmain.m4sh (func_win32_libid)
+	[ cygwin, mingw ]: Robustify sed script to determine
+	win32_libid_type.
+	(func_mode_link) [ mingw ]: Ignore `-lm'.
+
 2005-09-25  Peter Ekberg  <peda@lysator.liu.se>
 
 	* libltdl/libltdl/lt__private.h, libltdl/lt_error.c:
