--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-09-25  Alan W. Irwin  <irwin@beluga.phys.uvic.ca>,
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (func_win32_libid) [ cygwin, mingw ]: Robustify sed
+	script to determine win32_libid_type.
+	(link mode) [ mingw ]: Ignore `-lm'.
+
 2005-09-22  Tim Rice  <tim@multitalents.net>
 
 	* libtool.m4 (AC_PROG_NM, AC_LIBTOOL_LANG_CXX_CONFIG)
