* configure.ac <AUTOM4TE>: Allow variable override.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-26  Tim Rice  <tim@multitalents.net>
+
+	* configure.ac <AUTOM4TE>: Allow variable override.
+
 2005-09-25  Alan W. Irwin  <irwin@beluga.phys.uvic.ca>,
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
