--- a/HACKING
+++ b/HACKING
@@ -368,9 +368,8 @@ yyyy-mm-dd  Name of Author  <email@address>  (tiny change)
   since last release (they should be updated in CVS along with commits that
   require it so that users can work with CVS snapshots).
 
-* Double check that libltdl version number updates weren't forgotten since last
-  release (they should be updated in CVS along with commits that require it so
-  that users can work with CVS snapshots).
+* Update the libltdl VERSION_INFO in Makefile.am for changes since the last
+  release.
 
 * Update the version number in configure.ac.
   See http://www.gnu.org/software/libtool/contribute.html for details of
