--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -3774,12 +3774,12 @@ However, you might still need to maintain your own list of loaded
 module handles (in parallel with the list maintained inside libltdl)
 if there were any other data that your application wanted to associate
 with each open module.  Instead, you can use the following @sc{api}
-calls to do that for you.  You must first obtain a unique caller id
+calls to do that for you.  You must first obtain a unique interface id
 from libltdl, and subsequently always use it to retrieve the data you
 stored earlier.  This allows different libraries to each store their
 own data against loaded modules, without interfering with one another.
 
-@deftp {Type} lt_dlcaller_id
+@deftp {Type} lt_dlinterface_id
 The opaque type used to hold individual data set keys.
 @end deftp
 
@@ -3789,14 +3789,14 @@ library's expected module interface when iterating over the global
 handle list.
 @end deftp
 
-@deftypefun lt_dlcaller_id lt_dlcaller_register (@w{const char *@var{id_string},} @w{lt_dlhandle_interface *@var{iface}})
+@deftypefun lt_dlinterface_id lt_dlinterface_register (@w{const char *@var{id_string},} @w{lt_dlhandle_interface *@var{iface}})
 Use this to obtain a unique key to store and retrieve per module data,
 if you supply an @var{id_string} and @var{iface}, then the resulting
-@code{lt_dlcaller_id} can be used to filter the module handles
+@code{lt_dlinterface_id} can be used to filter the module handles
 returned by @samp{lt_dlhandle_next}.
 @end deftypefun
 
-@deftypefun lt_ptr lt_dlcaller_set_data (@w{lt_dlcaller_id @var{key}}, @w{lt_dlhandle @var{handle}}, @w{lt_ptr @var{data}})
+@deftypefun lt_ptr lt_dlcaller_set_data (@w{lt_dlinterface_id @var{key}}, @w{lt_dlhandle @var{handle}}, @w{lt_ptr @var{data}})
 Set @var{data} as the set of data uniquely associated with @var{key} and
 @var{handle} for later retrieval.  This function returns the @var{data}
 previously associated with @var{key} and @var{handle} if any.  A result of
@@ -3824,7 +3824,7 @@ else
 @end example
 @end deftypefun
 
-@deftypefun lt_ptr lt_dlcaller_get_data (@w{lt_dlcaller_id @var{key}}, @w{lt_dlhandle @var{handle}})
+@deftypefun lt_ptr lt_dlcaller_get_data (@w{lt_dlinterface_id @var{key}}, @w{lt_dlhandle @var{handle}})
 Return the address of the data associated with @var{key} and
 @var{handle}, or else @code{NULL} if there is none.
 @end deftypefun
@@ -3835,23 +3835,23 @@ application to track the modules that have been loaded and unloaded:
 
 @example
 int
-my_dlcaller_callback (lt_dlhandle handle, lt_ptr key_ptr)
+my_dlinterface_callback (lt_dlhandle handle, void *key)
 @{
   struct my_module_data *my_data;
 
-  my_data = lt_dlcaller_get_data (handle, (lt_dlcaller_id) *key_ptr);
+  my_data = lt_dlcaller_get_data (handle, (lt_dlinterface_id) key);
 
   return process (my_data);
 @}
 
 int
-my_dlcaller_foreach (lt_dlcaller_id key)
+my_dlinterface_foreach (lt_dlinterface_id key)
 @{
-  lt_dlforeach (my_dlcaller_callback, (lt_ptr) &key);
+  lt_dlforeach (my_dlinterface_callback, (void *) key);
 @}
 @end example
 
-@deftypefun lt_dlhandle lt_dlhandle_first (@w{lt_dlcaller_id @var{key}})
+@deftypefun lt_dlhandle lt_dlhandle_first (@w{lt_dlinterface_id @var{key}})
 Normally, you can fetch each of the loaded module handles in turn with
 successive calls to @samp{lt_dlhandle_next} as shown in the example
 above.  In that example, the loop iterates over every libltdl loaded
@@ -3873,8 +3873,8 @@ iface_validator_callback (lt_dlhandle handle, const char *id_string)
 @end example
 
 @noindent
-When you register for a caller identification with
-@samp{lt_dlcaller_register}, you log the interface validator.  But
+When you register for an interface identification key with
+@samp{lt_dlinterface_register}, you log the interface validator.  But
 this time, when you start the iterator loop over the loaded module
 handles, if you fetch the first handle with @samp{lt_dlhandle_first},
 then that and all subsequent calls to @samp{lt_dlhandle_next} will
@@ -3882,21 +3882,30 @@ skip any loaded module handles that fail the registered interface
 validator callback function:
 
 @example
-/* @r{Register for a} caller_id @r{to identify ourselves to} libltdl.  */
-caller_id = lt_dlcaller_register ("example", iface_validator_callback);
+/* @r{Register for an} interface_id @r{to identify ourselves to} libltdl.  */
+interface_id = lt_dlinterface_register ("example", iface_validator_callback);
 
 @dots{}
-/* @r{Iterate over the modules related to my} caller_id.  */
+/* @r{Iterate over the modules related to my} interface_id.  */
 @{
-  lt_dlhandle handle = lt_dlhandle_first (caller_id);
-
-  while ((handle = lt_dlhandle_next (handle)))
+  lt_dlhandle handle;
+  for (handle = lt_dlhandle_first (interface_id);
+       handle;
+       handle = lt_dlhandle_next (handle))
     @{
       @dots{}
     @}
 @}
 @end example
 @end deftypefun
+
+Old versions of libltdl also provided a simpler, but similar, @sc{api}
+based around @code{lt_dlcaller_id}.  Unfortunately, it had no
+provision for detecting whether a module belonged to a particular
+interface as libltdl didn't support multiple loaders in the same
+address space at that time.  Those @sc{api}s are no longer supported
+as there would be no way to stop clients of the old @sc{api}s from
+seeing (and accidentally altering) modules loaded by other libraries.
 
 
 @node Module loaders for libltdl
