--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2005-10-03  Gary V. Vaughan  <gary@gnu.org>
+
+	* libltdl/m4/ltdl.m4: Bump serial as we are changing the
+	interface.
+	(LT_CONFIG_LTDL_DIR): New macro to centralise setting the
+	subdirectory used for libltdl.
+	(LTDL_CONVENIENCE): Continue backwards compatibility support for
+	declaring the libltdl source subdirectory with an argument, but
+	defer to LT_CONFIG_LTDL_DIR.
+	(AC_LIBLTDL_CONVENIENCE): Adjust to upgrade to the new style.
+	(LTDL_INSTALLABLE, AC_LIBLTDL_INSTALLABLE): Ditto.
+	(LTDL_INIT): lt_ltdl_dir is set by LT_CONFIG_LTDL_DIR now, and
+	even `./' needs trailing slashes trimming!  If the user didn't
+	upgrade their configure.ac yet, call LT_CONFIG_LTDL_DIR for them.
+	* libtoolize.m4sh (func_scan_files): If --ltdl option is given
+	without a directory argument, use the value from
+	LT_CONFIG_LTDL_DIR; if the argument is given, and there is also a
+	value in LT_CONFIG_LTDL_DIR, ensure they are the same.
+	* libltdl/configure.ac: Use it.
+	* NEWS: Updated.
+
 2005-10-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/old-m4-iface.at (Makefile.in): Do not reconfigure
