--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER): Require
+	AC_CANONICAL_HOST and _LT_DECL_SED.
+
 2005-10-03  Gary V. Vaughan  <gary@gnu.org>
 
 	* libltdl/m4/ltdl.m4: Bump serial as we are changing the
